# saas-maker

./: .cache_ggshield  .env.example  .gitignore  .gitmodules  .posthog-events.json  .prettierignore  .saasmaker.json  .size-limit.json  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CONTRIBUTING.md  DROID_PROD_SMOKE.md  DROID_PR_SMOKE.txt  PLAN.md  PROJECT_STATUS.md  README.md  SECURITY.md  STATUS.md  WORKFLOW.md  biome.json  blume.config.ts  config.example.json  design.html  eslint.config.js  foundry.json  foundry.projects.json  knip.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rag-service-retired-2026-06-21.tgz  renovate.json  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json  vitest.config.ts  (+3 more)
.github/: dependabot.yml
.husky/: pre-push
app/: error.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
automation/: README.md  job-policies.json
catalog/: foundry.json  foundry.schema.json
cli/: README.md  package.json
components/: DrHistoryChart.tsx  VitalsReporter.tsx
config/: agent-surfaces-registry.json  brand-channels.json  geo-observatory.json  (+8 more)
reel/: Cargo.toml
reel/src/: artifact.rs  autopilot.rs  autopilot_daemon.rs  brief.rs  cli.rs  config.rs  lib.rs  main.rs  marketing.rs  marketing_posting.rs  orchestrator.rs  publisher.rs  quality.rs  runner.rs  saas_maker.rs  store.rs  templates.rs  watcher.rs  worker_client.rs
reel/src/engine/: factory.rs  mock.rs  mod.rs  money_printer.rs  reel_maker.rs  render_pro.rs
reel/src/publishers/: instagram.rs  youtube.rs
reel/tests/: pipeline_flow.rs
(+1941 files in other folders)
