[package]
name = "reel"
version = "0.1.0"
edition = "2021"
description = "Rust orchestrator for the reel-pipeline (Phase 1 rewrite of the Node glue)."
license = "MIT"

[[bin]]
name = "reel"
path = "src/main.rs"

[lib]
name = "reel"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
